--- a/SumoRObot/platformio.ini
+++ b/SumoRObot/platformio.ini
@@ -12,3 +12,6 @@
 platform = atmelavr
 board = pro8MHzatmega168
 framework = arduino
+lib_deps = 
+	arduino-libraries/Servo@^1.1.8
+	nrf24/RF24@^1.4.5
