--- a/SumoRObot/platformio.ini
+++ b/SumoRObot/platformio.ini
@@ -8,9 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:pro8MHzatmega168]
+[env:pro16MHzatmega328]
 platform = atmelavr
-board = pro8MHzatmega168
+board = pro16MHzatmega328
+baud_rate = 115200
 framework = arduino
 lib_deps = 
 	arduino-libraries/Servo@^1.1.8
